--- a/CatNap/HTML/Index.html
+++ b/CatNap/HTML/Index.html
@@ -8,10 +8,34 @@
 </head>
 <body>
     <div id="cuerpo">
+        <!--Header-->
         <header>
-
+            <div id="logo">
+                <img src="../images/gatoPrueba.jpg" alt="Logo de la pagina">
+            </div>
+            <div id="menuGeneral">
+                <input type="text" placeholder="Search">
+                <div id="menu">
+                    <a href="">Sign in</a>
+                    <a href="">Sign up</a>
+                    <a href="">My Acount</a>
+                </div>
+            </div>
         </header>
-        
+
+        <!--Cuerpo de la pagina-->
+        <section id="publicaciones">
+            <h2>Derecha</h2>
+
+        </section>
+        <section>
+            <h2>Izquierda</h2>
+        </section>
+            
+        <!--Footer-->
+        <footer>
+            <h2>Footer</h2>
+        </footer>
     </div>
 </body>
 </html>
