--- a/CatNap/HTML/Index.html
+++ b/CatNap/HTML/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=º, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -11,7 +11,7 @@
     <div id="cuerpo">
         <header>
             <div id="logo">
-                <a href=""><img src="/images/gatoPrueba.jpg" alt=""></a>
+                <a href=""><img src="../images/CatNapLogoWhite.png" alt=""></a>
             </div>
             <div id="logBus">
                 <div id="buscador">
@@ -21,10 +21,10 @@
                     </form>
                 </div>
                 <div id="logIn">
-                    <a href="">Log In</a>
+                    <a href="LogIn.html">Log In</a>
                     <a href="">Log Out</a>
-                    <a href="">Register</a>
-                    <a href=""><img src="/images/gatoPrueba.jpg" alt=""></a>
+                    <a href="Register.html">Sing Up</a>
+                    <a href=""><img src="../images/gatoPrueba.jpg" alt=""></a>
                 </div>
             </div>
         </header>
@@ -42,7 +42,7 @@
                     </div>
                     <div class="user">
                         <p>Paquito83</p>
-                        <img src="/images/gatoPrueba.jpg" alt="">
+                        <img src="../images/gatoPrueba.jpg" alt="">
                     </div>
                 </div>
                 <div>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="cuerpoPubli">
                     <div class="imagenPubli">
-                        <img src="/images/gatoPrueba.jpg" alt="" width="600" height="300">
+                        
                     </div>
                     <p>Esto es un gato</p>
                 </div>
@@ -66,7 +66,7 @@
                     </div>
                     <div class="user">
                         <p>Paquito83</p>
-                        <img src="/images/gatoPrueba.jpg" alt="">
+                        <img src="../images/gatoPrueba.jpg" alt="">
                     </div>
                 </div>
                 <div>
@@ -74,9 +74,8 @@
                 </div>
                 <div class="cuerpoPubli">
                     <div class="imagenPubli">
-                        <img src="/images/gatoPrueba.jpg" alt="" width="600" height="300">
+                        <img src="../images/gatoPrueba.jpg" alt="" width="600" height="300">
                     </div>
-                    <p>Esto es un gato</p>
                 </div>
             </div>
 
@@ -90,7 +89,7 @@
                     </div>
                     <div class="user">
                         <p>Paquito83</p>
-                        <img src="/images/gatoPrueba.jpg" alt="">
+                        <img src="../images/gatoPrueba.jpg" alt="">
                     </div>
                 </div>
                 <div>
@@ -98,9 +97,9 @@
                 </div>
                 <div class="cuerpoPubli">
                     <div class="imagenPubli">
-                        <img src="/images/gatoPrueba.jpg" alt="" width="600" height="300">
+
                     </div>
-                    <p>Esto es un gato</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam maxime pariatur soluta fuga numquam eveniet architecto, ad quibusdam excepturi ut optio rerum ipsum et illo eos voluptatem nisi aliquam sed.</p>
                 </div>
             </div>
             
@@ -110,7 +109,7 @@
             <div id="menus"> 
                 <a href="">More</a>
                 <a href="">Explore</a>
-                <a href="">Profile</a>
+                <a href="Profile.html">Profile</a>
                 <a href="">settings</a>
             </div>
         </section>
@@ -118,7 +117,7 @@
 
 
         <footer>
-
+            ©copyright by CatNap SL
         </footer>
     </div>
 </body>
