--- a/CatNap/HTML/Index.html
+++ b/CatNap/HTML/Index.html
@@ -11,7 +11,7 @@
     <div id="cuerpo">
         <header>
             <div id="logo">
-                <a href=""><img src="../images/CatNapLogoWhite.png" alt=""></a>
+                <a href="Index.html"><img src="../images/CatNapLogoWhite.png" alt=""></a>
             </div>
             <div id="logBus">
                 <div id="buscador">
@@ -24,7 +24,7 @@
                     <a href="LogIn.html">Log In</a>
                     <a href="">Log Out</a>
                     <a href="Register.html">Sing Up</a>
-                    <a href=""><img src="../images/gatoPrueba.jpg" alt=""></a>
+                    <a href="Profile.html"><img src="../images/gatoPrueba.jpg" alt=""></a>
                 </div>
             </div>
         </header>
@@ -107,10 +107,10 @@
 
         <section id="filtro">
             <div id="menus"> 
-                <a href="">More</a>
-                <a href="">Explore</a>
-                <a href="Profile.html">Profile</a>
-                <a href="">settings</a>
+                <a href=""><i class="fa-solid fa-circle-info"></i>More</a>
+                <a href=""><i class="fa-brands fa-wpexplorer"></i>Explore</a>
+                <a href="Profile.html"><i class="fa-solid fa-user"></i>Profile</i></a>
+                <a href=""><i class="fa-solid fa-gear"></i>Settings</a>
             </div>
         </section>
         
