--- a/CatNap/HTML/Register.html
+++ b/CatNap/HTML/Register.html
@@ -21,10 +21,10 @@
                     </form>
                 </div>
                 <div id="logIn">
-                    <a href="">Log In</a>
+                    <a href="LogIn.html">Log In</a>
                     <a href="">Log Out</a>
-                    <a href="">Register</a>
-                    <a href=""><img src="../images/gatoPrueba.jpg" alt=""></a>
+                    <a href="Register.html">Sing Up</a>
+                    <a href="Profile.html"><img src="../images/gatoPrueba.jpg" alt=""></a>
                 </div>
             </div>
         </header>
